Fix battle layout: nameplates below/above sprites, no overlap

--- a/client/src/pages/Game/Battle/Battle.css
+++ b/client/src/pages/Game/Battle/Battle.css
@@ -285,14 +285,14 @@
 
 .battle__enemy-area .battle__nameplate {
   position: absolute;
-  top: 5%;
+  top: 55%;
   right: 3%;
 }
 
 .battle__enemy-area .battle__sprite {
   position: absolute;
-  top: 5%;
-  right: 35%;
+  top: 0;
+  right: 8%;
   width: 220px;
   height: 220px;
 }
@@ -312,14 +312,14 @@
 
 .battle__player-area .battle__nameplate {
   position: absolute;
-  bottom: 5%;
+  bottom: 55%;
   left: 3%;
 }
 
 .battle__player-area .battle__sprite {
   position: absolute;
   bottom: 0;
-  left: 35%;
+  left: 8%;
   width: 280px;
   height: 280px;
 }
